<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="app_name">Vote System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="repassword">Re Enter Password</string>
    <string name="securityhint">Security Hint</string>
    <string name="forgetpassword">Forget Password!</string>
    <string name="entersecurityhint">Enter Your Security Hint Here</string>
    <string name="yourpassword">This Your Password</string>
    <string name="register">Register</string>
    <string name="getpassword">Get Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="showpassword">Show Password</string>
    <string name="enterpassword">Enter Password</string>
    <string name="add">ADD</string>
    <string name="accountpassword">ACCOUNT PASSWORD</string>
    <string name="addphoto">Select Account Picture</string>
    <string name="delete">DELETE</string>
    <string name="accountname">Account Name</string>
    <string name="email">Email</string>
     <string name="admin">Admin</string>
     <string name="user">User</string>
     <string name="report">Report</string>
     
     <string name="firstname">Enter candidate first name.</string>
     <string name="lastname">Enter candidate last name.</string>
     <string name="party">Enter candidate Party name.</string>
     <string name="symbole">Enter candidate election symbol.</string>
     

</resources>
