<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".LoginAndRegistrion" >

    <LinearLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="30dp" >

        <Button
            android:id="@+id/admin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_corner_button"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/admin"
            android:textStyle="bold" />

        <Button
            android:id="@+id/user_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
             android:layout_margin="10dp"
             android:layout_gravity="center"
            android:text="@string/user"
            android:textStyle="bold" />
         <Button
            android:id="@+id/report_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
             android:layout_margin="10dp"
             android:layout_gravity="center"
            android:text="@string/report"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>