<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical"
     >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/rel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/firstname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_round_corner_edittext"
                    android:hint="Enter candidate first name"
                    android:text="First Name"
                    android:textColor="@color/edit_text_color"
                    android:padding="5dp" >
                </EditText>

                <EditText
                    android:id="@+id/lastname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_round_corner_edittext"
                    android:padding="5dp"
                    android:text="Last Name"
                    android:hint="@string/lastname"
                    android:textColor="@color/edit_text_color" />

                <EditText
                    android:id="@+id/partyname_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:hint="@string/party"
                    android:text="Party Name"
                    android:textColor="@color/edit_text_color"
                    android:background="@drawable/background_round_corner_edittext" >
                </EditText>
                
                <EditText
                    android:id="@+id/symbol_edt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:hint="@string/symbole"
                    android:text="Symbol Name"
                    android:textColor="@color/edit_text_color"
                    android:background="@drawable/background_round_corner_edittext" >
                </EditText>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_round_corner_button"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/background_round_corner_button"
                    android:paddingLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:paddingRight="20dp"
                    android:text="@string/cancel" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>